# 2025-Phase-2-Data-Science-Ben-Nguyen

./: .gitignore  README.md  pyproject.toml
1. Analysis and Preprocessing/: part1-submission_BenNguyen.ipynb  requirements.txt  summary.txt
2. Machine Learning Project/: part2_submission.ipynb
3. Deep Learning Project/: part3.ipynb  submission.csv
