[project]
name = "nzmsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy~=1.26.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pandas-profiling>=3.6.6",
    "pyqt5>=5.15.11",
    "scikit-learn~=1.1.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
